--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,19 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-        "zendframework/zend-mvc": "^3.0.1",
-        "zfcampus/zf-development-mode": "^3.0"
+        "zfcampus/zf-development-mode": "^3.0",
+        "zendframework/zend-mvc-form": "^1.0",
+        "zendframework/zend-mvc-plugins": "^1.0",
+        "zendframework/zend-session": "^2.8",
+        "zendframework/zend-authentication": "^2.6",
+        "zendframework/zend-mvc": "^3.1",
+        "doctrine/doctrine-orm-module": "^2.1",
+        "doctrine/migrations": "^1.8",
+        "zendframework/zend-math": "^3.1",
+        "zendframework/zend-crypt": "^3.3",
+        "zendframework/zend-captcha": "^2.8",
+        "zendframework/zend-mail": "^2.10",
+        "zendframework/zend-mime": "^2.7"
     },
     "autoload": {
         "psr-4": {
